	(max_using <= MAXDATACOLS) with a check for whether the limit is
	actually exceeded by the current using spec.

	* demo/fitmulti.dem:  Include a test script written by Hanno Hoffstadt
	that exercises multidimensional fitting.  The fit routine currently
	handles up to 5 independent dimensions, but the script tries up to six.
	It incidentally exercises the `set dummy` command and `while {...}`.

2013-06-12  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in:  More complete autoconfigure tests for qt5.

	* src/save.c (save_dummy) src/set.c (set_dummy) src/show.c
	src/unset.c (unset_dumm) docs/gnuplot.doc demo/fit.dem:
	"fit" can use more dummy variable names than plot or splot, but these
	were not being shown/reset/saved.  Document "unset dummy".
	Now we handle the full set of possible dummy variables (MAX_NUM_VAR).

2013-06-11  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm:  Support boxed
	labels.  Includes support for rotated text.

	* src/win/wgdiplus.cpp (gdiplusPolylineEx):  Properly close polygons
	by using DrawPolygon if the first and last point of the polyline are
	equal.

	* src/win/wgraph.c:  Tweak layer support.

2013-06-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/show.c src/unset.c:  show/unset individual datafile options.

	* docs/gnuplot.doc src/specfun.c:  Documentation shows incorrect sign
	in the exponent of the Voigt function.  

	* docs/gnuplot.doc: typos

2013-06-06  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/fit.c (fit_command):  Log file contained the wrong variable name
	for axis restrictions.  Reported by Victor Slabinski on gnuplot-bugs.

	* src/fit.c:  Make Ctrl-C interrupt fits in Windows console mode gnuplot
	again.

2013-06-05  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in:  Allow building against either Qt4 or Qt5.
	./configure --with-qt		# Try Qt5 first, fall back to Qt4
	./configure --with-qt=qt4	# Prefer Qt4 to Qt5 even if present